@@ -6,6 +6,9 @@
  Subversion: http://mangadmin.googlecode.com/svn/
 
 /***********************************************/
+Rev. 5:
+  - added italian language, thanks to hybrid1907
+
 Rev. 4:
   - added better polish translation, thanks to sahib
   - converted language files to be display characters without errors
